--- a/Algoritmos_AG1(Introducción_a_Algoritmos)_ManelGonzalezHuete.ipynb
+++ b/Algoritmos_AG1(Introducción_a_Algoritmos)_ManelGonzalezHuete.ipynb
@@ -35,9 +35,9 @@
         "\n",
         "Nombre: Manel González Huete\n",
         "\n",
-        "https://https://colab.research.google.com/drive/1fKpHGxnrodZCLL5miSWZa2KLNDKjE_QV\n",
+        "https://colab.research.google.com/drive/1jXXBJhBthHmKjWP6I9S9iqgRjZjVBaNf\n",
         "\n",
-        "https://https://github.com/ManelGH1167/MasterIA/blob/main/Algoritmos_AG1(Introducci%C3%B3n_a_Algoritmos)_ManelGonzalez.ipynb\n",
+        "https://github.com/ManelGH1167/MasterIA/blob/main/Algoritmos_AG1(Introducci%C3%B3n_a_Algoritmos)_ManelGonzalez.ipynb\n",
         "\n"
       ]
     },
@@ -79,7 +79,7 @@
         "id": "isR0FLnvD64M",
         "outputId": "36fd823b-f59e-4f8a-ae3f-3a79c0c124cb"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "dZin0SMubpRo"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
         "id": "MtlaIevRcflH",
         "outputId": "4f4f15e4-7f3d-4864-818f-58b1d9a0c351"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "MapmlQZQfcow"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
       "metadata": {
         "id": "OjPOtJ9GyDoQ"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "id": "SxB-_cebygG3",
         "outputId": "095bdb6c-0bc8-4891-c42f-1075e04d9de4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
