--- a/Algoritmos_AG1(Introducción_a_Algoritmos)_ManelGonzalezHuete.ipynb
+++ b/Algoritmos_AG1(Introducción_a_Algoritmos)_ManelGonzalezHuete.ipynb
@@ -1776,7 +1776,7 @@
       "metadata": {
         "id": "WxWEhyB37uRO"
       },
-      "execution_count": 87,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -1932,17 +1932,14 @@
     {
       "cell_type": "code",
       "source": [
-        "#[23000, 8514, 58608, 51376, 158592, 13060, 145596, 10582, 78800, 217056]\n",
         "# Ejemplo con divide y venceras\n",
         "time1 = time.time()\n",
         "resultado = distanciaMin(Lista1D)\n",
-        "\n",
-        "time2 = time.time()\n",
         "# Calcula el tiempo transcurrido\n",
-        "timeTotal = time2 - time1\n",
+        "timeTotal = time.time() - time1\n",
         "\n",
         "print(f\"La distancia mínima es de: {resultado[0]}, para los puntos {resultado[1]} y {resultado[2]}. Total tiempo: {timeTotal}\")\n",
-        "print(f\"La complejidad (big O), con divide y vencerás es de: O(n*log(n)) debido a la ordenación\")\n"
+        "print(f\"La complejidad (big O), con divide y vencerás es de: O(n*log(n)) debido a la ordenación\")"
       ],
       "metadata": {
         "colab": {
@@ -2048,34 +2045,13 @@
         "    for coord1, coord2 in zip(punto1, punto2):\n",
         "        suma += (coord2 - coord1) ** 2\n",
         "\n",
-        "    return math.sqrt(suma)\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Ejemplo de uso\n",
-        "p1 = ([1])  # Punto en 3D\n",
-        "p2 = ([4])  # Otro punto en 3D 7.0710678118654755\n",
-        "distance = distancia_euclidiana(p1, p2)\n",
-        "print(f\"La distancia euclidiana entre {p1} y {p2} es {distance}\")\n",
-        ""
+        "    return math.sqrt(suma)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xFd12j2hUC-P",
-        "outputId": "2a745caa-335d-4333-8906-d91200a24ae0"
+        "id": "xFd12j2hUC-P"
       },
-      "execution_count": 117,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "La distancia euclidiana entre [1] y [4] es 3.0\n"
-          ]
-        }
-      ]
+      "execution_count": 143,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2091,8 +2067,6 @@
     {
       "cell_type": "code",
       "source": [
-        "time1 = time.time()\n",
-        "\n",
         "def distanciaMin_fueza_bruta_(aLista):\n",
         "    \"\"\"\n",
         "    Busca la distancia mínima entre los números de una lista mediante fuerza bruta.\n",
@@ -2130,21 +2104,22 @@
         "    # Retornamos la distancia mínima y su posición\n",
         "    return minimo, posiciones\n",
         "\n",
-        "\n",
-        "time2 = time.time()\n",
-        "# Calcula el tiempo transcurrido\n",
-        "timeTotal = time2 - time1\n",
-        "\n",
         "Lista = Lista1D\n",
+        "time1 = time.time()\n",
         "minimo, posiciones = distanciaMin_fueza_bruta_(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
         "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
         "print(\"---------------\")\n",
         "Lista = Lista2D\n",
+        "time1 = time.time()\n",
         "minimo, posiciones = distanciaMin_fueza_bruta_(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
         "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
         "print(\"---------------\")\n",
         "Lista = Lista3D\n",
+        "time1 = time.time()\n",
         "minimo, posiciones = distanciaMin_fueza_bruta_(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
         "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
         "print(\"---------------\")\n",
         "print(f\"La complejidad (big O), por fuerza bruta es de: O(n^2)\")"
@@ -2154,19 +2129,163 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0g0M6JgjWW4u",
-        "outputId": "77c0eff9-aacf-4588-bb93-d7994a5dc7af"
+        "outputId": "84d0964c-915f-4d82-c8b6-27c1faeab3da"
       },
-      "execution_count": 141,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 50, entre los puntos [1, 29], con valores: 8514 y 8464. Total tiempo: 0.0007498264312744141\n",
+            "La distancia mínima es de: 50, entre los puntos [1, 29], con valores: 8514 y 8464. Total tiempo: 0.0002243518829345703\n",
             "---------------\n",
-            "La distancia mínima es de: 1623.943656658075, entre los puntos [5, 67], con valores: (9900, 86310) y (11288, 87153). Total tiempo: 0.0007498264312744141\n",
+            "La distancia mínima es de: 1623.943656658075, entre los puntos [5, 67], con valores: (9900, 86310) y (11288, 87153). Total tiempo: 0.007815837860107422\n",
             "---------------\n",
-            "La distancia mínima es de: 4123.976842805982, entre los puntos [28, 66], con valores: (42234, 39564, 29456) y (44919, 40318, 26418). Total tiempo: 0.0007498264312744141\n",
+            "La distancia mínima es de: 4123.976842805982, entre los puntos [28, 66], con valores: (42234, 39564, 29456) y (44919, 40318, 26418). Total tiempo: 0.009211540222167969\n",
+            "---------------\n",
+            "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Divide y Vencerás**\n",
+        "Adaptación Divide y Vencerás para utilizar puntos 1D, 2D o 3D"
+      ],
+      "metadata": {
+        "id": "weOO8WcqrYz-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing_extensions import AsyncGenerator\n",
+        "def distanciaMin_General(aLista):\n",
+        "    \"\"\"\n",
+        "    Busca la distancia mínima entre los números de una lista usando recursividad (divide y vencerás).\n",
+        "\n",
+        "    Parámetros:\n",
+        "    - aLista: Lista de números.\n",
+        "\n",
+        "    Retorna:\n",
+        "    - distancia mínima encontrada\n",
+        "    - indice1: índice para la posición 1 de la lista de números\n",
+        "    - indice2: índice para la posición 2 de la lista de números\n",
+        "    \"\"\"\n",
+        "\n",
+        "    def divide_venceras_general(inicio, final, punto1D):\n",
+        "\n",
+        "        def magnitud(vector):\n",
+        "            \"\"\"\n",
+        "            Calcula el módulo (longitud) de un vector en 3D.\n",
+        "            \"\"\"\n",
+        "            # En este caso los vectores son un tupla con la coodenada en la posición 0 y el índice en la posición 1\n",
+        "            return math.sqrt(sum(v**2 for v in vector[0]))\n",
+        "\n",
+        "        # Condición de salida recursividad: Si la sublista tiene un solo elemento, no hay pares para comparar\n",
+        "        if final - inicio <= 1:\n",
+        "            return float('inf'), -1, -1\n",
+        "\n",
+        "        # Buscamos la mitad de la lista para dividirla en 2\n",
+        "        mitad = (inicio + final) // 2\n",
+        "        # Calculamos cada mitad independientemente\n",
+        "        dist_izq, indice1_izq, indice2_izq = divide_venceras_general(inicio, mitad, punto1D)\n",
+        "        dist_der, indice1_der, indice2_der = divide_venceras_general(mitad, final, punto1D)\n",
+        "\n",
+        "        # Obtenemos la distancia mínima (y sus índices) de las dos sublistas\n",
+        "        if dist_izq < dist_der :\n",
+        "            dist_min = dist_izq\n",
+        "            indice1_min, indice2_min = (indice1_izq, indice2_izq)\n",
+        "        else:\n",
+        "            dist_min = dist_der\n",
+        "            indice1_min, indice2_min = (indice1_der, indice2_der)\n",
+        "\n",
+        "        # Creamos una lista con todos los valores para una comparación cruzada\n",
+        "        lista_completa = [(num, index) for index, num in enumerate(aLista[inicio:final])]\n",
+        "        # Ordenamos por valor para facilitar la búsqueda cruzada\n",
+        "        # En vectores mayores a 1D se debe utilizar la magnitud (módulo) para la ordenación\n",
+        "        if punto1D:\n",
+        "            lista_completa.sort()\n",
+        "        else:\n",
+        "            lista_completa = sorted(lista_completa, key=magnitud)\n",
+        "\n",
+        "        # Recorremos la lista (que al estar ordenada) podemos comparar pares cercanos\n",
+        "        # para deterctar si hay un mínimo diferente al encontrado.\n",
+        "        for i in range(len(lista_completa)-1):\n",
+        "            # Si la lista es de enteros la distancia la calculamos por resta\n",
+        "            if punto1D:\n",
+        "                dist = abs(lista_completa[i + 1][0] - lista_completa[i][0])\n",
+        "            # Si la lista es vectores calculamos la distancia euclidiana\n",
+        "            else:\n",
+        "                dist = distancia_euclidiana(lista_completa[i + 1][0], lista_completa[i][0])\n",
+        "            if dist < dist_min:\n",
+        "                dist_min = dist\n",
+        "                indice1_min, indice2_min = lista_completa[i][1], lista_completa[i+1][1]\n",
+        "\n",
+        "        return dist_min, indice1_min, indice2_min\n",
+        "\n",
+        "    # No hay suficiente información\n",
+        "    if(len(aLista) < 2):\n",
+        "        return None\n",
+        "\n",
+        "    # Si la lista es de enteros (1D)\n",
+        "    if isinstance(aLista[0], int):\n",
+        "        punto1D = True\n",
+        "    else:\n",
+        "        punto1D = False\n",
+        "\n",
+        "    return divide_venceras_general(0, len(aLista), punto1D)"
+      ],
+      "metadata": {
+        "id": "uulmbYnjrZYq"
+      },
+      "execution_count": 184,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ejemplo con divide y venceras\n",
+        "Lista = Lista1D\n",
+        "time1 = time.time()\n",
+        "resultado = distanciaMin_General(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
+        "print(f\"La distancia mínima es de: {resultado[0]}, entre los puntos: {resultado[1]} y {resultado[2]}, con valores: {Lista[resultado[1]]} y {Lista[resultado[2]]}. Total tiempo: {timeTotal}\")\n",
+        "print(\"---------------\")\n",
+        "Lista = Lista2D\n",
+        "time1 = time.time()\n",
+        "resultado = distanciaMin_General(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
+        "print(f\"La distancia mínima es de: {resultado[0]}, entre los puntos: {resultado[1]} y {resultado[2]}, con valores: {Lista[resultado[1]]} y {Lista[resultado[2]]}. Total tiempo: {timeTotal}\")\n",
+        "print(\"---------------\")\n",
+        "Lista = Lista3D\n",
+        "time1 = time.time()\n",
+        "resultado = distanciaMin_General(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
+        "print(f\"La distancia mínima es de: {resultado[0]}, entre los puntos: {resultado[1]} y {resultado[2]}, con valores: {Lista[resultado[1]]} y {Lista[resultado[2]]}. Total tiempo: {timeTotal}\")\n",
+        "print(\"---------------\")\n",
+        "print(f\"La complejidad (big O), por fuerza bruta es de: O(n^2)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0nQLfF_Wt3C4",
+        "outputId": "46d135cd-c8a8-4d7a-eedd-6fcd551993e5"
+      },
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La distancia mínima es de: 50, entre los puntos: 29 y 1, con valores: 8464 y 8514. Total tiempo: 0.0004520416259765625\n",
+            "---------------\n",
+            "La distancia mínima es de: 1623.943656658075, entre los puntos: 5 y 67, con valores: (9900, 86310) y (11288, 87153). Total tiempo: 0.0029380321502685547\n",
+            "---------------\n",
+            "La distancia mínima es de: 4123.976842805982, entre los puntos: 28 y 66, con valores: (42234, 39564, 29456) y (44919, 40318, 26418). Total tiempo: 0.0025093555450439453\n",
             "---------------\n",
             "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
           ]
