--- a/Algoritmos_ManelGonzalezHuete_AG1(Introducción_a_Algoritmos).ipynb
+++ b/Algoritmos_ManelGonzalezHuete_AG1(Introducción_a_Algoritmos).ipynb
@@ -1766,17 +1766,17 @@
         "import time\n",
         "\n",
         "random.seed(22)\n",
-        "Lista1D = [random.randint(1, 10000)*random.randint(3, 33) for i in range(100)]\n",
-        "Lista2D = [(random.randint(1, 10000)*random.randint(3, 33),\n",
-        "            random.randint(1, 10000)*random.randint(3, 33)) for i in range(100)]\n",
-        "Lista3D = [(random.randint(1, 10000)*random.randint(3, 33),\n",
-        "            random.randint(1, 10000)*random.randint(3, 33),\n",
-        "            random.randint(1, 10000)*random.randint(3, 33)) for i in range(100)]"
+        "Lista1D = [random.randint(1, 10000)*random.randint(3, 30) for i in range(10000)]\n",
+        "Lista2D = [(random.randint(1, 10000)*random.randint(3, 30),\n",
+        "            random.randint(1, 10000)*random.randint(3, 30)) for i in range(10000)]\n",
+        "Lista3D = [(random.randint(1, 10000)*random.randint(3, 30),\n",
+        "            random.randint(1, 10000)*random.randint(3, 30),\n",
+        "            random.randint(1, 10000)*random.randint(3, 30)) for i in range(10000)]"
       ],
       "metadata": {
         "id": "WxWEhyB37uRO"
       },
-      "execution_count": 191,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1823,15 +1823,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Iec2W-vG8JeS",
-        "outputId": "d609fd6a-b96d-40d8-f514-c840a32c704c"
+        "outputId": "c2511d3f-2394-4d3d-c652-02f3971afc8a"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 50, entre los puntos [1, 29]. Total tiempo: 0.007110595703125\n",
+            "La distancia mínima es de: 0, entre los puntos [6, 5167]. Total tiempo: 14.520813226699829\n",
             "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
           ]
         }
@@ -1914,7 +1914,7 @@
       "metadata": {
         "id": "ZWGlyHFv8ghQ"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1934,15 +1934,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cw11rwTg80fQ",
-        "outputId": "9065f546-5b70-4cba-a4fc-5e4fe0589ed6"
+        "outputId": "7db7d864-1023-463b-bac9-703eaa2c7ed8"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 50, para los puntos 1 y 29. Total tiempo: 0.0008783340454101562\n",
+            "La distancia mínima es de: 0, para los puntos 56 y 2. Total tiempo: 0.06342673301696777\n",
             "La complejidad (big O), con divide y vencerás es de: O(n*log(n)) debido a la ordenación\n"
           ]
         }
@@ -1963,7 +1963,12 @@
         "* Por lo tanto, la complejidad total es: 𝑂(𝑛*log(𝑛)^2)\n",
         "\n",
         "**Espacio:**\n",
-        "El espacio requerido para manejar la lista y la pila de recursión es O(n)"
+        "El espacio requerido para manejar la lista y la pila de recursión es O(n)\n",
+        "\n",
+        "\n",
+        "### Comparativa\n",
+        "\n",
+        "Se observa que en fuerza bruta encontrar el resultado en un conjunto de 10000 números consume 14.5 segundos mientras que con divide y venceras el tiempo es únicamente de 0.063 segundos"
       ],
       "metadata": {
         "id": "xrqGAYb12_H6"
@@ -2010,15 +2015,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mB-Z5Vuz8ryN",
-        "outputId": "31c5ace4-c5e7-4313-f305-b9d118e2f1a6"
+        "outputId": "d57473d6-0bd5-4ae3-f91a-025256a6f0ac"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 50, entre los puntos [29, 1]. Total tiempo: 0.0004932880401611328\n",
+            "La distancia mínima es de: 0, entre los puntos [8888, 9688]. Total tiempo: 0.012050390243530273\n",
             "La complejidad (big O), por validación cruzada es de: O(n*log(n)) debido a la ordenación\n"
           ]
         }
@@ -2059,7 +2064,7 @@
       "metadata": {
         "id": "xFd12j2hUC-P"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2076,7 +2081,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def distanciaMin_fueza_bruta_(aLista):\n",
+        "def distanciaMin_fueza_bruta(aLista):\n",
         "    \"\"\"\n",
         "    Busca la distancia mínima entre los números de una lista mediante fuerza bruta.\n",
         "\n",
@@ -2115,19 +2120,19 @@
         "\n",
         "Lista = Lista1D\n",
         "time1 = time.time()\n",
-        "minimo, posiciones = distanciaMin_fueza_bruta_(Lista)\n",
+        "minimo, posiciones = distanciaMin_fueza_bruta(Lista)\n",
         "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
         "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
         "print(\"---------------\")\n",
         "Lista = Lista2D\n",
         "time1 = time.time()\n",
-        "minimo, posiciones = distanciaMin_fueza_bruta_(Lista)\n",
+        "minimo, posiciones = distanciaMin_fueza_bruta(Lista)\n",
         "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
         "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
         "print(\"---------------\")\n",
         "Lista = Lista3D\n",
         "time1 = time.time()\n",
-        "minimo, posiciones = distanciaMin_fueza_bruta_(Lista)\n",
+        "minimo, posiciones = distanciaMin_fueza_bruta(Lista)\n",
         "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
         "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
         "print(\"---------------\")\n",
@@ -2138,19 +2143,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0g0M6JgjWW4u",
-        "outputId": "ea4c3518-905c-4358-bbef-e6ea6a079b6c"
+        "outputId": "fc1fc304-8b2a-47ea-a613-aa1e827c5a9d"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 50, entre los puntos [1, 29], con valores: 8514 y 8464. Total tiempo: 0.001039743423461914\n",
+            "La distancia mínima es de: 0, entre los puntos [6, 5167], con valores: 17648 y 17648. Total tiempo: 4.978099584579468\n",
             "---------------\n",
-            "La distancia mínima es de: 1207.4025840621678, entre los puntos [43, 95], con valores: (51832, 30870) y (50643, 31080). Total tiempo: 0.008244514465332031\n",
+            "La distancia mínima es de: 5.0990195135927845, entre los puntos [4330, 9757], con valores: (93709, 8529) y (93708, 8534). Total tiempo: 38.337430477142334\n",
             "---------------\n",
-            "La distancia mínima es de: 4123.976842805982, entre los puntos [8, 46], con valores: (42234, 39564, 29456) y (44919, 40318, 26418). Total tiempo: 0.00841975212097168\n",
+            "La distancia mínima es de: 286.5431904617522, entre los puntos [121, 8389], con valores: (30159, 123810, 27111) y (30180, 123525, 27132). Total tiempo: 44.14480495452881\n",
             "---------------\n",
             "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
           ]
@@ -2181,7 +2186,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from typing_extensions import AsyncGenerator\n",
+        "\n",
         "def distanciaMin_General(aLista):\n",
         "    \"\"\"\n",
         "    Busca la distancia mínima entre los números de una lista usando recursividad (divide y vencerás).\n",
@@ -2240,9 +2245,10 @@
         "            # Si la lista es vectores calculamos la distancia euclidiana\n",
         "            else:\n",
         "                dist = distancia_euclidiana(lista_completa[i + 1][0], lista_completa[i][0])\n",
+        "\n",
         "            if dist < dist_min:\n",
         "                dist_min = dist\n",
-        "                indice1_min, indice2_min = lista_completa[i][1], lista_completa[i+1][1]\n",
+        "                indice1_min, indice2_min = lista_completa[i+1][1], lista_completa[i][1]\n",
         "\n",
         "        return dist_min, indice1_min, indice2_min\n",
         "\n",
@@ -2261,7 +2267,7 @@
       "metadata": {
         "id": "uulmbYnjrZYq"
       },
-      "execution_count": 198,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -2293,19 +2299,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0nQLfF_Wt3C4",
-        "outputId": "39a7c8fb-fc81-494f-957b-a3ac5f8b7ccf"
+        "outputId": "39b44b78-768b-4064-9489-5d878de679b2"
       },
-      "execution_count": 199,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 50, entre los puntos: 29 y 1, con valores: 8464 y 8514. Total tiempo: 0.0007243156433105469\n",
+            "La distancia mínima es de: 0, entre los puntos: 56 y 2, con valores: 6620 y 58608. Total tiempo: 0.06423211097717285\n",
             "---------------\n",
-            "La distancia mínima es de: 1718.0291033623382, entre los puntos: 9 y 66, con valores: (14056, 207805) y (12474, 208475). Total tiempo: 0.005493640899658203\n",
+            "La distancia mínima es de: 5.0990195135927845, entre los puntos: 4330 y 9757, con valores: (93709, 8529) y (93708, 8534). Total tiempo: 0.2259507179260254\n",
             "---------------\n",
-            "La distancia mínima es de: 4123.976842805982, entre los puntos: 8 y 46, con valores: (42234, 39564, 29456) y (44919, 40318, 26418). Total tiempo: 0.00311279296875\n",
+            "La distancia mínima es de: 465.4857677738386, entre los puntos: 1 y 38, con valores: (114090, 43700, 29724) y (30112, 235172, 9471). Total tiempo: 0.25083470344543457\n",
             "---------------\n",
             "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
           ]
@@ -2329,6 +2335,105 @@
       "metadata": {
         "id": "K-1IhTZK1coA"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Mejora\n",
+        "\n",
+        "Una posible mejora es cortar la búsqueda cuando la distancia sea 0. En listas muy grandes es posible que esta solución se obtenga sin llegar a calcular todas las opciones. Esta mejora se apreciará más en vectores de 1D, donde es más fácil que las distancias sean 0."
+      ],
+      "metadata": {
+        "id": "-tzS1QKZh_vF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def distanciaMin_fueza_bruta_2(aLista):\n",
+        "    \"\"\"\n",
+        "    Busca la distancia mínima entre los números de una lista mediante fuerza bruta.\n",
+        "\n",
+        "    Parámetros:\n",
+        "    - aLista: Lista con los punto (independientemente de su dimensión)\n",
+        "\n",
+        "    Retorna:\n",
+        "    - La distancia mínima entre dos puntos, dentro de una lista.\n",
+        "    \"\"\"\n",
+        "    posiciones = [0,0]\n",
+        "    minimo = 999999999\n",
+        "    punto1D = False\n",
+        "\n",
+        "    # Si la lista es de enteros (1D)\n",
+        "    if isinstance(aLista[0], int):\n",
+        "        punto1D = True\n",
+        "\n",
+        "    # Recorremos los elementos de la lista\n",
+        "    for i in range(len(aLista)):\n",
+        "        # Dado el punto i como pivote, recorremos el resto de elementos de la lista\n",
+        "        for j in range(i+1, len(aLista)):\n",
+        "            # Si la lista es de enteros la distancia la calculamos por resta\n",
+        "            if(punto1D):\n",
+        "                distancia = abs(aLista[i]-aLista[j])\n",
+        "            # Si la lista es vectores calculamos la distancia euclidiana\n",
+        "            else:\n",
+        "                distancia = distancia_euclidiana(aLista[i],aLista[j])\n",
+        "\n",
+        "            # Si las distancias son mínimas guardamos el valor y la posición\n",
+        "            if(distancia < minimo):\n",
+        "                minimo = distancia\n",
+        "                posiciones = [i,j]\n",
+        "\n",
+        "            # Si la distancia es 0, ya no hace falta buscar más, no encontraremos una distancia menor\n",
+        "            if(minimo == 0):\n",
+        "                return minimo, posiciones\n",
+        "\n",
+        "    # Retornamos la distancia mínima y su posición\n",
+        "    return minimo, posiciones\n",
+        "\n",
+        "Lista = Lista1D\n",
+        "time1 = time.time()\n",
+        "minimo, posiciones = distanciaMin_fueza_bruta_2(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
+        "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
+        "print(\"---------------\")\n",
+        "Lista = Lista2D\n",
+        "time1 = time.time()\n",
+        "minimo, posiciones = distanciaMin_fueza_bruta_2(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
+        "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
+        "print(\"---------------\")\n",
+        "Lista = Lista3D\n",
+        "time1 = time.time()\n",
+        "minimo, posiciones = distanciaMin_fueza_bruta_2(Lista)\n",
+        "timeTotal = time.time() - time1 # Calcula el tiempo transcurrido\n",
+        "print(f\"La distancia mínima es de: {minimo}, entre los puntos {posiciones}, con valores: {Lista[posiciones[0]]} y {Lista[posiciones[1]]}. Total tiempo: {timeTotal}\")\n",
+        "print(\"---------------\")\n",
+        "print(f\"La complejidad (big O), por fuerza bruta es de: O(n^2)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aqc7W1BdiPVO",
+        "outputId": "7aac8c56-b78e-41ff-f234-34529f63df2c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La distancia mínima es de: 0, entre los puntos [6, 5167], con valores: 17648 y 17648. Total tiempo: 0.009590864181518555\n",
+            "---------------\n",
+            "La distancia mínima es de: 5.0990195135927845, entre los puntos [4330, 9757], con valores: (93709, 8529) y (93708, 8534). Total tiempo: 39.449517011642456\n",
+            "---------------\n",
+            "La distancia mínima es de: 51594.024809080365, entre los puntos [1, 8], con valores: (114090, 43700, 29724) y (132600, 88536, 12144). Total tiempo: 0.00011777877807617188\n",
+            "---------------\n",
+            "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
+          ]
+        }
+      ]
     }
   ]
 }
