--- a/Algoritmos_ManelGonzalezHuete_AG1(Introducción_a_Algoritmos).ipynb
+++ b/Algoritmos_ManelGonzalezHuete_AG1(Introducción_a_Algoritmos).ipynb
@@ -2296,7 +2296,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "0nQLfF_Wt3C4",
         "outputId": "39b44b78-768b-4064-9489-5d878de679b2"
