--- a/Algoritmos_ManelGonzalezHuete_AG1(Introducción_a_Algoritmos).ipynb
+++ b/Algoritmos_ManelGonzalezHuete_AG1(Introducción_a_Algoritmos).ipynb
@@ -38,7 +38,7 @@
         "\n",
         "https://colab.research.google.com/drive/1jXXBJhBthHmKjWP6I9S9iqgRjZjVBaNf\n",
         "\n",
-        "https://github.com/ManelGH1167/MasterIA/blob/main/Algoritmos_AG1(Introducci%C3%B3n_a_Algoritmos)_ManelGonzalezHuete.ipynb\n",
+        "https://github.com/ManelGH1167/MasterIA/blob/main/Algoritmos_ManelGonzalezHuete_AG1(Introducci%C3%B3n_a_Algoritmos).ipynb\n",
         "\n"
       ]
     },
@@ -1776,7 +1776,7 @@
       "metadata": {
         "id": "WxWEhyB37uRO"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2267,7 +2267,7 @@
       "metadata": {
         "id": "uulmbYnjrZYq"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2296,13 +2296,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0nQLfF_Wt3C4",
         "outputId": "39b44b78-768b-4064-9489-5d878de679b2"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2417,7 +2416,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aqc7W1BdiPVO",
-        "outputId": "7aac8c56-b78e-41ff-f234-34529f63df2c"
+        "outputId": "3a9b5e2b-4729-451f-fe25-82e3d4b1349f"
       },
       "execution_count": null,
       "outputs": [
@@ -2425,16 +2424,25 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La distancia mínima es de: 0, entre los puntos [6, 5167], con valores: 17648 y 17648. Total tiempo: 0.009590864181518555\n",
+            "La distancia mínima es de: 0, entre los puntos [6, 5167], con valores: 17648 y 17648. Total tiempo: 0.00970458984375\n",
             "---------------\n",
-            "La distancia mínima es de: 5.0990195135927845, entre los puntos [4330, 9757], con valores: (93709, 8529) y (93708, 8534). Total tiempo: 39.449517011642456\n",
+            "La distancia mínima es de: 5.0990195135927845, entre los puntos [4330, 9757], con valores: (93709, 8529) y (93708, 8534). Total tiempo: 44.77853798866272\n",
             "---------------\n",
-            "La distancia mínima es de: 51594.024809080365, entre los puntos [1, 8], con valores: (114090, 43700, 29724) y (132600, 88536, 12144). Total tiempo: 0.00011777877807617188\n",
+            "La distancia mínima es de: 286.5431904617522, entre los puntos [121, 8389], con valores: (30159, 123810, 27111) y (30180, 123525, 27132). Total tiempo: 45.802003145217896\n",
             "---------------\n",
             "La complejidad (big O), por fuerza bruta es de: O(n^2)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se observa la gran mejora en los vectores de 1D"
+      ],
+      "metadata": {
+        "id": "Im5RenQPp8-t"
+      }
     }
   ]
 }
