--- a/Seminario_Algoritmos_Manel_Gonzalez_Huete.ipynb
+++ b/Seminario_Algoritmos_Manel_Gonzalez_Huete.ipynb
@@ -18,7 +18,7 @@
       "source": [
         "# Algoritmos de optimización - Seminario<br>\n",
         "Nombre y Apellidos: <font color='Darkblue'>Manel González Huete</font><br>\n",
-        "Url: https://github.com/.../03MAIR---Algoritmos-de-Optimizacion---2019/tree/master/SEMINARIO<br>\n",
+        "Url: https://github.com/ManelGH1167/MasterIA/blob/main/Seminario_Algoritmos_Manel_Gonzalez_Huete.ipynb<br>\n",
         "Problema:\n",
         ">1. Sesiones de doblaje <br>\n",
         ">2. Organizar los horarios de partidos de La Liga<br>\n",
@@ -49,21 +49,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "AiskKkzZfy4e"
       },
       "outputs": [],
       "source": [
-        "#Asignacion de doblajes - Ramificación y Poda\n",
+        "#Asignacion de doblajes\n",
         "################################################################################\n",
-        "#    T A R E A\n",
-        "#   A\n",
-        "#   G\n",
-        "#   E\n",
-        "#   N\n",
+        "#     A C T O R E S\n",
         "#   T\n",
-        "#   E\n",
+        "#   O\n",
+        "#   M\n",
+        "#   A\n",
+        "#   S\n",
         "\n",
         "TOMAS0=[[1,1,1,1,1,0,0,0,0,0],\n",
         "        [0,0,1,1,1,0,0,0,0,0],\n",
@@ -257,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ETrI9a-QZ5lJ"
       },
@@ -276,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "AOZb0jTsZ5lK"
       },
@@ -293,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "qIUdY_SHZ5lK"
       },
@@ -311,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "f94Dg6NrZ5lK"
       },
@@ -330,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "HV1ShUACZ5lK"
       },
@@ -351,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "CJb5sQ0qkENy"
       },
@@ -448,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "N10oNBCAZ5lK"
       },
@@ -468,17 +467,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "SfTvBo6fZ5lK",
-        "outputId": "fdd05300-73f7-45f4-ff24-66edab660642"
+        "outputId": "21a4db6c-dc4b-4531-c96b-c38ac159672c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Tiempo de ejecución de 'fuerza_bruta_doblaje_coste': 0.320440 segundos\n",
+            "Tiempo de ejecución de 'fuerza_bruta_doblaje_coste': 0.314206 segundos\n",
             "Coste mínimo: 14\n",
             "Asignación de tomas:\n",
             "Día 1: [0, 4, 5]\n",
@@ -494,17 +496,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "QKllk0AKZ5lK",
-        "outputId": "1df9032c-55d7-4187-b921-4363e7eb7a6c"
+        "outputId": "fa662955-4495-4274-c755-4e8796a0b1bc"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Tiempo de ejecución de 'fuerza_bruta_doblaje_coste': 6.411649 segundos\n",
+            "Tiempo de ejecución de 'fuerza_bruta_doblaje_coste': 7.946782 segundos\n",
             "Coste mínimo: 11\n",
             "Asignación de tomas:\n",
             "Día 1: [0, 2, 3, 4, 5, 6]\n",
